# VIdeoVoiceCapturer

./: .gitignore  README.md  pyproject.toml  setup.py  vvc  youtube_cookies.txt
src/videovoicecapturer/: __init__.py  cli.py  extractor.py  trainer.py
src/videovoicecapturer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_cli.py  test_extractor.py  test_integration.py
