[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "videovoicecapturer"
version = "0.1.0"
description = "CLI tool to capture audio from YouTube videos"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2023.12.30",
    "click>=8.1.0",
]

[project.scripts]
vvc = "videovoicecapturer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["videovoicecapturer*"]

[tool.setuptools.package-dir]
"" = "src"