[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "videovoicecapturer"
version = "0.2.0"
description = "CLI tool to capture audio from YouTube videos and train voice models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "yt-dlp>=2023.12.30",
    "click>=8.1.0",
    # XTTS training dependencies
    "tts>=0.22.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
]

[project.scripts]
vvc = "videovoicecapturer.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["videovoicecapturer*"]

[tool.setuptools.package-dir]
"" = "src"
